# VeRi

./: .gitignore  Makefile  README.md  args.py  main.py  pyproject.toml  train.sh
docs/: EEEM071_Coursework_report_2025.docx
experiments/extra/: random_perspective.sh  train_resnet18_se.sh  train_resnet18_se_fc512.sh  train_resnet18_self_attention.sh  train_resnet50_se.sh  train_resnet50_se_fc512.sh  train_vit_b_16.sh
experiments/section1/: train_mobilenet.sh  train_resnet.sh  train_resnet_fc512.sh  train_vgg.sh
experiments/section2/: data_augmentation.py
experiments/section3/: batch_size_exploration.py  lr_exploration.py  optimizer_exploration.py
src/: transforms.py
src/models/: __init__.py  resnet.py  self_attention.py  squeeze_and_excite.py  tvmodels.py
src/utils/: torchtools.py  wandb_logger.py
