[tool.poetry]
name = "veri"
version = "0.1.0"
description = "EEEM071 coursework: vehicle re-identification"
authors = ["frankcholula <lu.phrank@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" },
    { include = "experiments" }
]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.6.0"
torchvision = "^0.21.0"
wandb = "^0.19.8"
dotenv = "^0.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
